--- a/MvcApp/appsettings.json
+++ b/MvcApp/appsettings.json
@@ -4,7 +4,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs\\log.txt",
+          "path": "log.txt",
           "rollingInterval": "Day"
         }
       }
